# gitlinter

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  LICENSE  README.md  package-lock.json  pyproject.toml  pytest.ini
docs/: api.md  conf.py  index.md  modules.rst  usage.md  your_package.rst
tests/: test_example.py
your_package/: docstring_example.py  example.py
