[tool.poetry]
name = "itg-python-project-template"
version = "0.1.0"
description = "Template project for pre-commit."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "your_package" }]

[tool.poetry.dependencies]
python = "^3.11"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
sphinx = "^7.1.2"
myst-parser = "^2.0.0"
pydocstyle = "^6.3.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
